--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="">
-        <title>Life Expectancy Against Incomedm</title>
+        <title>Life Expectancy Against Income</title>
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!-- Custom styling -->
@@ -12,13 +12,12 @@
         <script src="https://kit.fontawesome.com/4cf7efc90c.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
+            <nav id="header" class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png">
-                    Life Expenctancy Against Income Per Person (i.e. GDP per capita). (1800-2014)
+                    Life Expectancy Against Income Per Person (i.e. GDP per capita).(1800-2014)
                 </a>
-            </div>
-        </nav>
+            </nav>
+        
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-md-10 offset-md-1 col-sm-12 col-xs-12">
